--- a/package.json
+++ b/package.json
@@ -6,39 +6,33 @@
     "presets": [
       "airbnb",
       "env",
-      "stage-1",
+      "stage-0",
       "react"
     ]
   },
-  "devDependencies": {
-    "jsdom": "^9.9.1",
-    "mocha": "^6.2.1",
-    "react-scripts": "^1.0.7",
-    "react-test-renderer": "^16.0.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
-  },
   "dependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^8.2.2",
-    "babel-preset-airbnb": "^2.1.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-1": "^6.24.1",
-    "chai": "^4.2.0",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.1",
-    "mocha-multi": "^1.1.3",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "sinon": "^1.17.7"
+    "mocha-multi": "^1.0.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.2",
+    "react-scripts": "1.1.4",
+    "webpack": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "mocha --timeout 5000 -R mocha-multi --reporter-options spec=-,json=.results.json",
-    "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
-    "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-airbnb": "^2.5.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.1.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "mocha": "^5.2.0",
+    "sinon": "^1.17.7"
   }
 }
